--- a/http_server/app/templates/new_user.html
+++ b/http_server/app/templates/new_user.html
@@ -1,16 +1,15 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}MediaCloud - Login{% endblock %}
+{% block title %}MediaCloud - New User{% endblock %}
 
 {% block page_content %}
 <div class="row">
     <div class="col-md-4 col-md-offset-3">
         <div class="page-header">
-            <h1>Login</h1>
+            <h1>New User</h1>
         </div>
         {{ wtf.quick_form(form) }}
     </div>
 </div>
 {% endblock %}
-
