--- a/http_server/app/templates/403.html
+++ b/http_server/app/templates/403.html
@@ -4,6 +4,6 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>抱歉，服务器内部错误！</h1>
+    <h1>抱歉，禁止访问，请访问其他页面！</h1>
 </div>
 {% endblock %}
