--- a/http_server/app/templates/404.html
+++ b/http_server/app/templates/404.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Flasky - Page Not Found{% endblock %}
+{% block title %}视频监控管理系统{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Not Found</h1>
+    <h1>抱歉，您访问的页面未找到！</h1>
 </div>
 {% endblock %}
