update user manage: 1. base.html 2. group ID rename

--- a/http_server/app/templates/base.html
+++ b/http_server/app/templates/base.html
@@ -84,7 +84,7 @@
         </button>
 
         <div class="navbar-header pull-left">
-            <a href="index.html" class="navbar-brand">
+            <a href="#" class="navbar-brand">
                 <small>
                     <i class="fa fa-leaf green bigger-125"></i>
                     Cloud Media Manage
@@ -111,7 +111,7 @@
                         </li>
 
                         <li>
-                            <a href="profile.html">
+                            <a href="#">
                                 <i class="ace-icon fa fa-user"></i>
                                 修改密码
                             </a>
@@ -152,7 +152,7 @@
             <li class="">
                 <a href="{{ url_for('group.manage') }}">
                     <i class="menu-icon fa fa-group green"></i>
-                    <span class="menu-text"> 组管理 </span>
+                    <span class="menu-text bigger-120"> 组管理 </span>
                 </a>
 
                 <b class="arrow"></b>
@@ -161,7 +161,7 @@
             <li class="">
                 <a href="{{ url_for('user.manage') }}">
                     <i class="menu-icon fa fa-user blue"></i>
-                    <span class="menu-text"> 帐号管理 </span>
+                    <span class="menu-text bigger-120"> 帐号管理 </span>
                 </a>
 
                 <b class="arrow"></b>
@@ -170,7 +170,7 @@
             <li class="">
                 <a href="{{ url_for('main.about') }}">
                     <i class="menu-icon fa fa-info red"></i>
-                    <span class="menu-text"> 关于我们 </span>
+                    <span class="menu-text bigger-120"> 关于我们 </span>
                 </a>
 
                 <b class="arrow"></b>
