--- a/http_server/app/templates/group/edit.html
+++ b/http_server/app/templates/group/edit.html
@@ -22,7 +22,7 @@
 
                         <div class="form-group">
                             <label class="col-sm-3 control-label no-padding-right" for="form-input-readonly">
-                                帐&nbsp;号</label>
+                                组&nbsp;ID</label>
 
                             <div class="col-sm-9">
                                 <input name="gid" readonly="" type="text" value={{ group.gid }}
