--- a/http_server/app/templates/group/manage.html
+++ b/http_server/app/templates/group/manage.html
@@ -26,67 +26,163 @@
                 <br>
             </div>
 
+            <!-- PAGE CONTENT BEGINS -->
             <div class="row">
                 <div class="col-xs-12">
-                    <!-- PAGE CONTENT BEGINS -->
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <!--
-                            <div class="table-header">
-                                Results for "Latest Registered Domains"
-                            </div>
-                            -->
-
-                            <!-- div.table-responsive -->
-
-                            <!-- div.dataTables_borderWrap -->
-                            <div>
-                                <table name="table" id="dynamic-table"
-                                       class="table table-striped table-bordered table-hover">
-                                    <thead>
-                                    <tr>
-                                        <th>组ID</th>
-                                        <th>昵称</th>
-                                        <th>操作</th>
-                                    </tr>
-                                    </thead>
-
-                                    <tbody>
-                                    {% for group in groups %}
-                                    <tr class={{ group.gid }}>
-
-                                        <td>{{ group.gid }}</td>
-                                        <td>{{ group.username }}</td>
-
-                                        <td>
-                                            <div class="action-buttons">
-                                                <a class="blue" href="{{ url_for('group.details', gid=group.gid) }}">
-                                                    <i class="ace-icon fa fa-search-plus bigger-130"></i>
-                                                </a>
-
-                                                <a class="green" href="{{ url_for('group.edit', gid=group.gid) }}">
-                                                    <i class="ace-icon fa fa-pencil bigger-130"></i>
-                                                </a>
-
-                                                <a class="red" href="{{ url_for('group.delete', gid=group.gid) }}">
-                                                    <i class="ace-icon fa fa-trash-o bigger-130"></i>
-                                                </a>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    {% endfor %}
-
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
+                    <!--
+                    <div class="table-header">
+                        Results for "Latest Registered Domains"
                     </div>
+                    -->
 
+                    <!-- div.table-responsive -->
+
+                    <!-- div.dataTables_borderWrap -->
+                    <div>
+                        <table name="table" id="dynamic-table"
+                               class="table table-striped table-bordered table-hover">
+                            <thead>
+                            <tr>
+                                <th>组ID</th>
+                                <th>昵称</th>
+                                <th>操作</th>
+                            </tr>
+                            </thead>
+
+                            <tbody>
+                            {% for group in groups %}
+                            <tr class={{ group.gid }}>
+
+                                <td>{{ group.gid }}</td>
+                                <td>{{ group.username }}</td>
+
+                                <td>
+                                    <div class="action-buttons">
+                                        <a class="blue" href="{{ url_for('group.details', gid=group.gid) }}">
+                                            <i class="ace-icon fa fa-search-plus bigger-150"></i>
+                                        </a>
+                                        &nbsp;
+                                        <a class="green" href="{{ url_for('group.edit', gid=group.gid) }}">
+                                            <i class="ace-icon fa fa-pencil bigger-150"></i>
+                                        </a>
+                                        &nbsp;
+                                        <a class="delete" href=""
+                                           value={{ group.gid }} data-count={{ group.count }}>
+                                            <i class="ace-icon fa fa-trash-o bigger-150 red"></i>
+                                        </a>
+                                    </div>
+                                </td>
+                            </tr>
+                            {% endfor %}
+
+                            </tbody>
+                        </table>
+                    </div>
                     <!-- PAGE CONTENT ENDS -->
+
+                    <div id="dialog-confirm" class="hide">
+                        <div class="alert alert-danger bigger-110">
+                            组下没有账号，可以删除，如果删除，将永久性删除，并且不能恢复。
+                        </div>
+
+                        <div class="space-6"></div>
+
+                        <p class="bigger-110 bolder center grey">
+                            <i class="ace-icon fa fa-hand-o-right blue bigger-120"></i>
+                            确认删除?
+                        </p>
+                    </div><!-- #dialog-confirm -->
+
+                    <div id="info-confirm" class="hide">
+                        <div class="alert alert-info bigger-110">
+                            组下还有账号，不能删除该组，如果想继续删除，先把组下的所有帐号迁移至其他组，然后再删除。
+                        </div>
+
+                        <div class="space-6"></div>
+
+                        <p class="bigger-110 bolder center grey">
+                            <i class="ace-icon fa fa-hand-o-right blue bigger-120"></i>
+                            删除提醒
+                        </p>
+                    </div><!-- #dialog-confirm -->
+
                 </div><!-- /.col -->
             </div><!-- /.row -->
         </div><!-- /.page-content -->
     </div>
 </div>
 
+{% endblock %}
+
+{% block script %}
+<script type="text/javascript">
+    jQuery(function ($) {
+        //override dialog's title function to allow for HTML titles
+        $.widget("ui.dialog", $.extend({}, $.ui.dialog.prototype, {
+            _title: function (title) {
+                var $title = this.options.title || '&nbsp;'
+                if (("title_html" in this.options) && this.options.title_html == true)
+                    title.html($title);
+                else title.text($title);
+            }
+        }));
+
+        $(".delete").on('click', function (e) {
+            e.preventDefault();
+
+            var count = $(this).attr("data-count");
+            var gid = $(this).attr("value");
+            if (count > 0) {
+                $("#info-confirm").removeClass('hide').dialog({
+                    resizable: false,
+                    width: '320',
+                    modal: true,
+                    title: "<div class='widget-header'><h4 class='smaller'><i class='ace-icon fa fa-exclamation-triangle blue'></i> 组删除？</h4></div>",
+                    title_html: true,
+                    buttons: [
+                        {
+                            html: "<i class='ace-icon fa fa-times bigger-110'></i>&nbsp; 取消",
+                            "class": "btn btn-minier",
+                            click: function () {
+                                $(this).dialog("close");
+                            }
+                        }
+                    ]
+                });
+            }
+            else {
+                $("#dialog-confirm").removeClass('hide').dialog({
+                    resizable: false,
+                    width: '320',
+                    modal: true,
+                    title: "<div class='widget-header'><h4 class='smaller'><i class='ace-icon fa fa-exclamation-triangle red'></i> 组删除？</h4></div>",
+                    title_html: true,
+                    buttons: [
+                        {
+                            html: "<i class='ace-icon fa fa-trash-o bigger-110'></i>&nbsp; 删除",
+                            "class": "btn btn-danger btn-minier",
+                            click: function () {
+                                $(this).dialog("close");
+                                $.post("delete/" + gid)
+                                    .success(
+                                        function (data) {
+                                            window.location.reload();
+                                        }
+                                    )
+                            }
+                        }
+                        ,
+                        {
+                            html: "<i class='ace-icon fa fa-times bigger-110'></i>&nbsp; 取消",
+                            "class": "btn btn-minier",
+                            click: function () {
+                                $(this).dialog("close");
+                            }
+                        }
+                    ]
+                });
+            }
+        });
+    });
+</script>
 {% endblock %}
