update user manage: 1. Add User key token 2. rename Group Key from username to name 3. create default Group Document in group collection

--- a/http_server/app/templates/group/details.html
+++ b/http_server/app/templates/group/details.html
@@ -14,7 +14,7 @@
                     组详情
                     <small>
                         <i class="ace-icon fa fa-angle-double-right"></i>
-                        {{ group.username }}&nbsp;&lt;{{ group.gid }}&gt;
+                        {{ group.name }}&nbsp;&lt;{{ group.gid }}&gt;
                     </small>
                 </h1>
             </div><!-- /.page-header -->
