--- a/http_server/app/templates/user/new.html
+++ b/http_server/app/templates/user/new.html
@@ -70,7 +70,7 @@
                             <div class="col-sm-9">
                                 <select name="group" id="group-select">
                                     {% for group in groups %}
-                                    <option value={{ group.gid }}>{{ group.username }}</option>
+                                    <option value={{ group.gid }}>{{ group.name }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
