update user manage: 1. user roles value redefine

--- a/http_server/app/templates/user/new.html
+++ b/http_server/app/templates/user/new.html
@@ -54,13 +54,13 @@
                             <label class="col-sm-3 control-label no-padding-right "> 角&nbsp;色 </label>
                             <div class="col-sm-9">
                                 <label>
-                                    <input name="role" type="radio" checked="checked" class="ace" value="Puller"/>
-                                    <span class="lbl"> Puller </span>
+                                    <input name="role" type="radio" checked="checked" class="ace" value="puller"/>
+                                    <span class="lbl"> puller </span>
                                 </label>
                                 &nbsp;&nbsp;
                                 <label>
-                                    <input name="role" type="radio" class="ace" value="Pusher"/>
-                                    <span class="lbl"> Pusher </span>
+                                    <input name="role" type="radio" class="ace" value="pusher"/>
+                                    <span class="lbl"> pusher </span>
                                 </label>
                             </div>
                         </div>
