--- a/http_server/app/templates/user/edit.html
+++ b/http_server/app/templates/user/edit.html
@@ -47,23 +47,23 @@
                             <div class="col-sm-9">
                                 {% if user.role_radio() %}
                                 <label>
-                                    <input name="role" type="radio" class="ace" value="Puller" checked="checked"/>
-                                    <span class="lbl"> Puller </span>
+                                    <input name="role" type="radio" class="ace" value="puller" checked="checked"/>
+                                    <span class="lbl"> puller </span>
                                 </label>
                                 &nbsp;&nbsp;
                                 <label>
-                                    <input name="role" type="radio" class="ace" value="Pusher"/>
-                                    <span class="lbl"> Pusher </span>
+                                    <input name="role" type="radio" class="ace" value="pusher"/>
+                                    <span class="lbl"> pusher </span>
                                 </label>
                                 {% else %}
                                 <label>
-                                    <input name="role" type="radio" class="ace" value="Puller"/>
-                                    <span class="lbl"> Puller </span>
+                                    <input name="role" type="radio" class="ace" value="puller"/>
+                                    <span class="lbl"> puller </span>
                                 </label>
                                 &nbsp;&nbsp;
                                 <label>
-                                    <input name="role" type="radio" class="ace" value="Pusher" checked="checked"/>
-                                    <span class="lbl"> Pusher </span>
+                                    <input name="role" type="radio" class="ace" value="pusher" checked="checked"/>
+                                    <span class="lbl"> pusher </span>
                                 </label>
                                 {% endif %}
                             </div>
