--- a/http_server/app/templates/auth/login.html
+++ b/http_server/app/templates/auth/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta charset="utf-8"/>
@@ -36,6 +36,15 @@
 </head>
 
 <body class="login-layout">
+<div class="container">
+    {% for message in get_flashed_messages(with_categories=True) %}
+    <div class="alert alert-{{ message[0] }}">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message[1] }}
+    </div>
+    {% endfor %}
+</div>
+
 <div class="main-container">
     <div class="main-content">
         <div class="row">
@@ -85,7 +94,7 @@
 
                                             <div class="clearfix">
                                                 <label class="inline">
-                                                    <input name="remember" type="checkbox" class="ace"/>
+                                                    <input name="remember" type="checkbox" class="ace" value="on"/>
                                                     <span class="lbl">记住我</span>
                                                 </label>
 
@@ -263,6 +272,10 @@
 <![endif]-->
 <script type="text/javascript">
     if ('ontouchstart' in document.documentElement) document.write("<script src='../../static/assets/js/jquery.mobile.custom.min.js'>" + "<" + "/script>");
+
+
+
+
 </script>
 
 <!-- inline scripts related to this page -->
@@ -275,6 +288,10 @@
             $(target).addClass('visible');//show target
         });
     });
+
+
+
+
 </script>
 <script type="text/javascript">
     window.onload = function () {
@@ -292,6 +309,7 @@
             }
         }
     }
+
 </script>
 </body>
 </html>
