--- a/http_server/app/templates/user/new.html
+++ b/http_server/app/templates/user/new.html
@@ -107,7 +107,7 @@
                             <div class="col-sm-9">
                                 <input name="vendor" readonly="" type="text" class="col-xs-10 col-sm-5"
                                        id="form-vid-input-readonly"
-                                       value={{ vendor }}
+                                       value={{ vendor.username }}
                                 />
                             </div>
                         </div>
