--- a/http_server/app/templates/group/details.html
+++ b/http_server/app/templates/group/details.html
@@ -51,16 +51,24 @@
                                         <td>{{ user.account }}</td>
                                         <td>{{ user.username }}</td>
                                         {% if user.is_active() %}
-                                        <td>激活</td>
+                                        <td>
+                                            <span class="label label-sm label-success">激活</span>
+                                        </td>
                                         {% else %}
-                                        <td>未激活</td>
+                                        <td>
+                                            <span class="label label-sm arrowed-in label-inverse">未激活</span>
+                                        </td>
                                         {% endif %}
                                         <td>{{ user.role }}</td>
                                         {% if user.is_online() %}
-                                        <td>是</td>
+                                        <td>
+                                            <span class="label label-sm label-warning arrowed arrowed-right">是</span>
+                                        </td>
                                         <td></td>
                                         {% else %}
-                                        <td>否</td>
+                                        <td>
+                                            <span class="label label-sm label-fail arrowed arrowed-right">否</span>
+                                        </td>
                                         <td>
                                             <div class="hidden-sm hidden-xs action-buttons">
                                                 <a href="{{ url_for('user.edit', account=user.account) }}">
