user manager:   1. enlarge the label input radio

--- a/http_server/app/templates/auth/login.html
+++ b/http_server/app/templates/auth/login.html
@@ -74,13 +74,13 @@
 
                                     <form name="login" action="" method="POST">
                                         <label>
-                                            <input name="admin" type="radio" checked="checked" class="ace"
+                                            <input name="admin" type="radio" checked="checked" class="ace input-lg"
                                                    value="yes"/>
                                             <span class="lbl"> &nbsp;管理员 </span>
                                         </label>
                                         &nbsp;&nbsp;
                                         <label>
-                                            <input name="admin" type="radio" class="ace" value="no"/>
+                                            <input name="admin" type="radio" class="ace input-lg" value="no"/>
                                             <span class="lbl"> &nbsp;普通用户 </span>
                                         </label>
                                         <div class="space-6"></div>
